aula4 - aplicando validadores assincronos

--- a/src/app/pages/dados-pessoais-form/dados-pessoais-form.component.html
+++ b/src/app/pages/dados-pessoais-form/dados-pessoais-form.component.html
@@ -24,6 +24,24 @@
           </div>
         </div>
 
+        <div class="cadastro-form__field">
+          <label for="cpf" class="cadastro-form__label">CPF</label>
+          <input
+            id="cpf"
+            type="text"
+            class="cadastro-form__input"
+            placeholder="000.000.000-00"
+            mask="000.000.000-00"
+            formControlName="cpf">
+          <div *ngIf="dadosPessoaisForm.get('cpf')?.invalid && 
+                      dadosPessoaisForm.get('cpf')?.touched" 
+                      class="cadastro-form__error">
+              <span *ngIf="dadosPessoaisForm.get('cpf')?.errors?.['required']">CPF é obrigatório</span>
+              <span *ngIf="dadosPessoaisForm.get('cpf')?.errors?.['cpfInvalido']">CPF inválido</span>
+          </div>
+    
+        </div>        
+
         <div class="cadastro-form__row">
           <div class="cadastro-form__field cadastro-form__field--half">
             <label for="estado" class="cadastro-form__label">Estado</label>
@@ -66,16 +84,27 @@
 
         <div class="cadastro-form__field">
           <label for="email" class="cadastro-form__label">Email</label>
-          <input
-            id="email"
-            type="text"
-            class="cadastro-form__input"
-            formControlName="email">
-          <div *ngIf="dadosPessoaisForm.get('email')?.invalid && 
-                      dadosPessoaisForm.get('email')?.touched" 
-                      class="cadastro-form__error">
-            <span *ngIf="dadosPessoaisForm.get('email')?.errors?.['required']">Email é obrigatório</span>
-            <span *ngIf="dadosPessoaisForm.get('email')?.errors?.['email']">Email inválido</span>
+          <div class="input-container">
+            <input
+              id="email"
+              type="text"
+              class="cadastro-form__input"
+              [ngClass]="{'cadastro-form__input--error': dadosPessoaisForm.get('email')?.invalid && dadosPessoaisForm.get('email')?.touched,
+                         'cadastro-form__input--pending': dadosPessoaisForm.get('email')?.pending}"
+              formControlName="email">
+          </div>
+          <div class="cadastro-form__error-container">
+            <div *ngIf="dadosPessoaisForm.get('email')?.invalid && 
+                          dadosPessoaisForm.get('email')?.touched &&
+                          !dadosPessoaisForm.get('email')?.pending"
+                          class="cadastro-form__error">
+              <span *ngIf="dadosPessoaisForm.get('email')?.errors?.['required']">Email é obrigatório</span>
+              <span *ngIf="dadosPessoaisForm.get('email')?.errors?.['email']">Email inválido</span>
+              <span *ngIf="dadosPessoaisForm.get('email')?.errors?.['emailExistente']">Este email já está cadastrado</span>
+            </div>
+            <div *ngIf="dadosPessoaisForm.get('email')?.pending" class="cadastro-form__pending">
+              Verificando disponibilidade...
+            </div>            
           </div>
         </div>
 
