--- a/src/app/pages/perfil-form/perfil-form.component.scss
+++ b/src/app/pages/perfil-form/perfil-form.component.scss
@@ -90,7 +90,7 @@
     text-align: center;
     cursor: pointer;
     transition: border-color 0.2s;
-    height: auto;
+    height: 150px;
     display: flex;
     align-items: center;
     justify-content: center;
